create manage department html

--- a/app/assets/stylesheets/2_column_right_nav.css
+++ b/app/assets/stylesheets/2_column_right_nav.css
@@ -168,7 +168,8 @@
 /********************************************************************************************************* left-content-main
 *******************************************************************************************************************/
 .content-left-main{
-    display:table-cell
+    display:table-cell;
+    height:100%;
 }
 .content-left-main[name="dashboard"]{
     height:100%;
