--- a/app/assets/stylesheets/Manage.css
+++ b/app/assets/stylesheets/Manage.css
@@ -268,3 +268,10 @@
     width:inherit;
     transition:width 0.45s ease-out 0.1s;
 }
+/********************************************************************************************************* 针对右边有导航的
+*******************************************************************************************************************/
+.manage-left-content{
+    padding-top:20px;
+    background-color:white;
+    position:relative
+}
