create manage department html

--- a/app/assets/stylesheets/2_column_right_nav.css
+++ b/app/assets/stylesheets/2_column_right_nav.css
@@ -178,7 +178,8 @@
     height:49px;
     background-color:#f7f7f7;
     position:relative;
-
+    border-bottom:1px solid #DCDCDC;
+    z-index:20;
 }
 .current-group-item{
     display:inline-block;
