--- a/app/assets/stylesheets/Manage-user.css
+++ b/app/assets/stylesheets/Manage-user.css
@@ -3,28 +3,51 @@
 .manage-left-menu[type="group"] li:first-of-type{
     text-align:center;
     font-weight:lighter;
-    font-size:22px;
-    color:#45ACFB;
-    padding:32px 0 10px;
+    font-size:15px;
+    color:rgba(0, 0, 0, 0.65);
+    padding:29px 0 1px;
+}
+.manage-left-menu[type="group"] li:nth-of-type(2){
+    margin:0px;
+    height:10px;
 }
 /********************************************************************************************************* 添加 User
 *******************************************************************************************************************/
-.manage-user-add{
+.manage-user-add.create-user{
+    background-color:white;
     position:relative;
-    z-index:10;
-    left:-350px;
-    top:0px;
-    height:100%;
-    margin-top:-71px;
-    width:200px;
-    overflow-y:auto;
-    overflow-x:hidden;
-    background:rgba(251,251,251,0.8);
-    transition:left 0.35s ease-out;
-    float:left;
+    display:none;
+}
+.manage-user-add.create-user>i{
+    left:12px
+}
+.manage-user-add.create-user>div>input{
+    margin-left:52px;
+}
+.manage-user-add.create-user> div >.div-select{
+    width:150px;
+    margin-left:52px;
+}
+.manage-user-add.create-user> div > label:first-of-type{
+    margin-top:10px;
+}
+.manage-user-add.create-user> div > label{
+    padding-left:52px;
+}
+.manage-user-add.create-user> div > .btn{
+    margin-top:19px;
+    margin-bottom:30px;
+    margin-left:66px;
 }
 .manage-user-add[id="user-edit"]{
-    left:-250px ;
+    position:absolute;
+    z-index:10;
+    left:-200px;
+    top:0px;
+    bottom:0px;
+    width:200px;
+    background:rgba(251,251,251,0.8);
+    transition:left 0.35s ease-out;
 }
 .manage-user-add>i{
     pointer-events:auto;
@@ -34,6 +57,9 @@
     cursor:pointer;
     font-size:18px;
     color:rgba(0,0,0,0.25)
+}
+.manage-user-add>i:hover{
+    color:rgba(0,0,0,0.65)
 }
 .manage-user-add>div{
     position:relative;
