--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -95,7 +95,7 @@
 
 <div class="assign-kpi-wrap" id="assign-kpi-wrap">
     <div id="assign-kpi" class="assign-kpi" special="user">
-        <div class="assign-kpi-top">
+        <div class="assign-kpi-top"  id="assign-kpi-top">
             <a class="btn" id="assign-kpi-cancel">Cancel</a>
             <a class="btn btn-primary" id="assign-kpi-pick" state="close"><i class="icon-key"  state="close"></i> All KPIs</a>
             <p><span class="normal-blue"></span><span>'s KPI</span></p>
