--- a/app/assets/stylesheets/Manage-kpi.css
+++ b/app/assets/stylesheets/Manage-kpi.css
@@ -3,20 +3,21 @@
 .manage-left-menu[type="category"] li:first-of-type{
     text-align:center;
     font-weight:lighter;
-    font-size:22px;
-    color:#45ACFB;
-    padding:32px 0 10px;
+    font-size:15px;
+    color:rgba(0, 0, 0, 0.65);
+    padding:29px 0 1px;
 }
 /********************************************************************************************************* 右边的内容部分
 *******************************************************************************************************************/
 .manage-btn-group>a.kpi-library-btn{
-
     left:130px;
-
     width:120px;
 }
 .manage-btn-group>a.kpi-library-btn i{
     left:-3px;
+}
+.next-manage-department-btn{
+    font-size:11px !important;
 }
 /***************************************************** 右边的list
 *********************************************************/
@@ -88,24 +89,20 @@
     width:87%;
     top:0px;
     padding:7px 5px 5px;
-    border:1px solid #f06b1b;
+    border:1px solid #f89d3b;
 }
 /********************************************************************************************************* 添加 KPI
 *******************************************************************************************************************/
 .manage-kpi-add{
-    position:relative;
-    z-index:10;
-    top:0px;
+    position:absolute;
     height:100%;
     margin-top:-71px;
-    left:-200px;
+    right:999em;
     width:200px;
-    min-width:200px;
-    max-width:200px;
-    overflow-y:auto;
     overflow-x:hidden;
-    background:rgba(251,251,251,0.8);
-    transition:left 0.35s ease-out;
+    background:rgba(251,251,251,1);
+    border-left:1px solid #DCDCDC
+
 }
 .manage-kpi-add>i{
     pointer-events:auto;
@@ -171,7 +168,7 @@
     font-weight:lighter;
     font-family:"open-sans";
     position:absolute;
-    top:48px;
+    top:90px;
     left:0px;
 }
 /*checkbox and calculate*/
