--- a/app/assets/stylesheets/Manage-user.css
+++ b/app/assets/stylesheets/Manage-user.css
@@ -14,30 +14,14 @@
 /********************************************************************************************************* 添加 User
 *******************************************************************************************************************/
 .manage-user-add.create-user{
-    background-color:white;
-    position:relative;
-    display:none;
+    background:rgba(251,251,251,0.8);
+    width:200px;
+    position:absolute;
+    right:999em;
+    border-left:1px solid #DCDCDC;
 }
-.manage-user-add.create-user>i{
-    left:12px
-}
-.manage-user-add.create-user>div>input{
-    margin-left:52px;
-}
-.manage-user-add.create-user> div >.div-select{
-    width:150px;
-    margin-left:52px;
-}
-.manage-user-add.create-user> div > label:first-of-type{
-    margin-top:10px;
-}
-.manage-user-add.create-user> div > label{
-    padding-left:52px;
-}
-.manage-user-add.create-user> div > .btn{
-    margin-top:19px;
-    margin-bottom:30px;
-    margin-left:66px;
+.manage-user-add.create-user .div-select{
+    margin-left:25px;
 }
 .manage-user-add[id="user-edit"]{
     position:absolute;
@@ -163,14 +147,7 @@
     overflow-y:auto;
     transition:left 0.35s ease-out,right 0.35s ease-out;
 }
-.assign-kpi-inner{
-    position:absolute;
-    top:139px;
-    right:30px;
-    bottom:30px;
-    left:30px;
-    /*border:2px solid #ddd;*/
-}
+
 .assign-kpi-top{
     position:absolute;
     right:0px;
@@ -207,111 +184,64 @@
 }
 /****************************  (left part)
 *********************************/
-.assign-kpi-inner ul.left{
+.assign-kpi-right ul.left{
     list-style-type: none;
     width:45%;
     padding-left:0px;
     margin:0px;
 
 }
-.assign-kpi-inner ul.left>li{
+.assign-kpi-right ul.left>li{
     border-bottom:1px solid #ddd;
     padding:2px 0;
     position:relative;
     cursor:default;
 }
-/*.assign-kpi-inner ul.left>li:first-of-type>p{*/
-    /*font-size:15px;*/
-/*}*/
-/*.assign-kpi-inner ul.left>li>h3{*/
-    /*margin:0;*/
-    /*color:#5FA9DA;*/
-    /*font-size:20px;*/
-    /*font-weight:lighter;*/
-    /*width:100%;*/
-    /*text-overflow:ellipsis;*/
-    /*overflow:hidden;*/
-    /*white-space:nowrap;*/
-    /*cursor:pointer;*/
-    /*transition:color 0.35s ease-out;*/
-/*}*/
-/*.assign-kpi-inner ul.left>li>h3:hover ~ i{*/
-    /*display:block;*/
-/*}*/
-/*.assign-kpi-inner ul.left>li>p{*/
-    /*margin:0;*/
-    /*color:rgba(0,0,0,0.3);*/
-    /*font-size:13px;*/
-    /*width:100%;*/
-    /*text-overflow:ellipsis;*/
-    /*overflow:hidden;*/
-    /*white-space:nowrap;*/
-    /*cursor:pointer;*/
-    /*transition:color 0.35s ease-out;*/
-/*}*/
-/*.assign-kpi-inner ul.left>li>p:hover{*/
-    /*color:rgba(0,0,0,0.8);*/
-/*}*/
-/*.assign-kpi-inner ul.left>li>p:hover ~ i{*/
-    /*display:block;*/
-/*}*/
-/*.assign-kpi-inner ul.left>li>i{*/
-    /*position:absolute;*/
-    /*right:10px;*/
-    /*top:17px;*/
-    /*color:rgba(0,0,0,0.5);*/
-    /*display:none;*/
-    /*pointer-events:auto;*/
-    /*transition:color 0.35s ease-out;*/
-/*}*/
-/*.assign-kpi-inner ul.left>li>i:hover{*/
-    /*color:rgba(0,0,0,0.8);*/
-    /*display:block;*/
-/*}*/
-.assign-kpi-inner ul.left>li>table{
+.assign-kpi-right ul.left>li>table{
     table-layout:fixed;
-    width:90%;
+    width:96%;
 }
-.assign-kpi-inner ul.left>li>table tr:first-of-type td:first-of-type{
+.assign-kpi-right ul.left>li>table tr:first-of-type td:first-of-type{
     color:#5FA9DA;
     font-size:22px;
     padding:4px 0 0;
-    width:30%;
+    width:40%;
     text-overflow:ellipsis;
     overflow:hidden;
     white-space:nowrap;
 }
-.assign-kpi-inner ul.left>li>table tr:first-of-type td:nth-of-type(2){
-    width:40%;
+.assign-kpi-right ul.left>li>table tr:first-of-type td:nth-of-type(2),.assign-kpi-right ul.left>li>table tr:first-of-type td:nth-of-type(3){
+    width:17%;
 }
-.assign-kpi-inner ul.left>li>table tr:first-of-type td input{
+.assign-kpi-right ul.left>li>table tr:first-of-type td input{
     padding:4px 5px;
     height:20px;
     font-size:13px;
-    width:120px;
+    width:80px;
     border:1px solid rgba(0,0,0,0.18);
 }
-.assign-kpi-inner ul.left>li>table tr:nth-of-type(2) td{
+.assign-kpi-right ul.left>li>table tr:nth-of-type(2) td{
     color:#9d9d9d;
     font-size:13px;
+    line-height:13px;
 }
-.assign-kpi-inner ul.left>li>table tr:nth-of-type(2) td:first-of-type{
+.assign-kpi-right ul.left>li>table tr:nth-of-type(2) td:first-of-type{
     width:60%;
     text-overflow:ellipsis;
     overflow:hidden;
     white-space:nowrap;
 }
 
-.assign-kpi-inner ul.left>li>i{
+.assign-kpi-right ul.left>li>i{
     position:absolute;
-    right:6px;
+    right:1px;
     top:23px;
     color:rgba(0,0,0,0.4);
     pointer-events:auto;
     cursor:pointer;
     transition:color 0.25s ease-out;
 }
-.assign-kpi-inner ul.left>li>i:hover{
+.assign-kpi-right ul.left>li>i:hover{
     color:rgba(0,0,0,0.8);
 }
 
@@ -321,84 +251,67 @@
 
 /****************************  kpi options for choose
 *********************************/
-.assign-kpi-options{
-    width:250px;
-    position:absolute;
-    top:135px;
-    bottom:0px;
-    right:-250px;
-    overflow-y:auto;
-    overflow-x:hidden;
-    background:#333;
-}
-.assign-kpi-options>i{
-    color:white;
-    position:relative;
-    left:5px;
-    top:5px;
-    pointer-events:auto;
-    cursor:pointer
-}
 
-.assign-kpi-options>.select-div{
+.assign-kpi-left>.select-div{
     width:180px;
     position:relative;
     top:13px;
     left:50%;
     margin-left:-90px;
 }
-.assign-kpi-options>.select-div>select{
+.assign-kpi-left>.select-div>select{
     width:180px;
 }
-.assign-kpi-options>.select-div .chosen-container-single .chosen-single{
+.assign-kpi-left>.select-div .chosen-container-single .chosen-single{
     background:white !important;
     border:1px solid #ddd;
     box-shadow:none !important;
 }
-.assign-kpi-options>.select-div .chosen-container-single .chosen-single div{
+.assign-kpi-left>.select-div .chosen-container-single .chosen-single div{
     background:white !important;
     border-left:none !important;
 }
-.assign-kpi-options>.select-div .chosen-container .chosen-drop{
+.assign-kpi-left>.select-div .chosen-container .chosen-drop{
     border-left-color:white;
     border-right-color:white;
 }
 
-.assign-kpi-options>ul{
+.assign-kpi-left>ul{
     list-style-type:none;
-    padding:0 0 0 34px;
+    padding:0 16px 0 16px;
     margin:0px;
     position:relative;
-    top:45px;
+    top:32px;
 }
-.assign-kpi-options>ul li{
-    padding-bottom:20px;
+.assign-kpi-left>ul li{
+    padding-top:8px;
+    padding-bottom:5px;
+    border-top:1px solid rgba(0,0,0,0.1)
 }
-.assign-kpi-options>ul li h3{
+.assign-kpi-left>ul li h3{
     margin:0px;
     font-weight:lighter;
     font-size:20px;
-    width:180px;
+    width:280px;
     text-overflow:ellipsis;
     overflow:hidden;
     white-space:nowrap;
     cursor:pointer;
     color:#5194cd;
     transition:color 0.25s ease-out;
+    line-height:16px;
 }
-.assign-kpi-options>ul li h3:hover{
+.assign-kpi-left>ul li h3:hover{
     color:#cda351
 }
-.assign-kpi-options>ul li h3:hover + p{
-    color:rgba(255,255,255,0.95)
-}
-.assign-kpi-options>ul li p{
+
+.assign-kpi-left>ul li p{
     margin:0px;
-    width:180px;
+    width:280px;
     text-overflow:ellipsis;
     overflow:hidden;
     white-space:nowrap;
-    color:rgba(255,255,255,0.8);
+    color:rgba(0,0,0,0.3);
     font-size:13px;
     transition:color 0.25s ease-out;
 }
@@ -431,16 +344,15 @@
     margin-left:3px;
 }
 .assign-kpi[special="user"] ul.left{
-    height:100%;
+    padding:0 10px;
     overflow-y:auto;
-    width:55%
+    width:96%;
+    margin-top:18px;
 }
 .assign-kpi[special="user"] ul.left li{
-    border-bottom:1px solid rgba(0,0,0,0.05);
+    border-top:1px solid rgba(0, 0, 0, 0.1);
 }
-.assign-kpi[special="user"] .assign-kpi-inner{
-    top:135px
-}
+
 /************************************************  kpi options (special)
 *************************************************************/
 .assign-kpi-options[special="user"]{
@@ -448,4 +360,68 @@
     top:0px;
     bottom:0px;
     display:none
+}
+/************************************************  user assign kpi
+*************************************************************/
+/*left*/
+.assign-kpi-left{
+    width:320px;
+    height:525px;
+    float:left;
+    border:1px solid rgba(0,0,0,0.2);
+    margin-left:15px;
+    margin-top:15px;
+    position:relative
+}
+.assign-kpi-left:after{
+    content:">";
+    font-size:33px;
+    font-family:"Arial";
+    font-weight:400;
+    position:absolute;
+    right:-30px;
+    margin-top:-50px;
+    top:50%;
+    color:rgba(0,0,0,0.4);
+}
+/*right*/
+.assign-kpi-right{
+    width:500px;
+    height:525px;
+    float:right;
+    margin-right:15px;
+    margin-top:15px;
+    border:1px solid rgba(0,0,0,0.2);
+}
+.assign-kpi-right>.select-div{
+    width:180px;
+    position:relative;
+    left:50%;
+    margin-left:-90px;
+    margin-top:12px;
+}
+.assign-kpi-inner{
+    height:460px;
+}
+/*bottom*/
+.assign-kpi-bottom{
+    width:900px;
+    clear:both;
+    height:50px;
+    position:relative;
+    top:10px;
+}
+.assign-kpi-bottom>p{
+    float:left;
+    margin-left:16px;
+    margin-top:4px;
+    display:inline-block;
+    font-size:27px;
+    font-family:"maven";
+    color:rgba(0,0,0,0.3)
+}
+.assign-kpi-bottom>.btn{
+    width:90px;
+    float:right;
+    margin-right:14px;
 }
