--- a/app/views/kpis/_new.html.erb
+++ b/app/views/kpis/_new.html.erb
@@ -2,6 +2,10 @@
      <div style="width:auto;height:71px;"></div>
      <i class="icon-remove" id="close-add-kpi"></i>
      <div>
+          <div class="select-div">
+                 <select data-placeholder="* Category" class="chosen-select"  id="new-kpi-category">
+                 </select>
+          </div>
           <input type="text" placeholder="* <%= t 'manage.kpi.name'%>" id="new-kpi-name"/>
           <textarea placeholder="   <%= t 'manage.kpi.description'%>" id="new-kpi-desc"></textarea>
           <div class="select-div">
