new manage department

--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -13,6 +13,9 @@
                          <li>
                               <a href="<%= kpis_path%>"><%= t 'menu.kpi'%></a>
                          </li>
+                      <li>
+                        <a href="<%= entities_path%>"><%= t 'menu.department'%></a>
+                      </li>
                          <li>
                               <a  href="<%= users_path%>"><%= t 'menu.user'%></a>
                          </li>
