--- a/app/assets/stylesheets/Manage-kpi.css
+++ b/app/assets/stylesheets/Manage-kpi.css
@@ -100,7 +100,7 @@
     right:999em;
     width:200px;
     overflow-x:hidden;
-    background:rgba(251,251,251,1);
+    background:#F7F7F7;
     border-left:1px solid #DCDCDC
 
 }
