--- a/app/views/kpis/index.html.erb
+++ b/app/views/kpis/index.html.erb
@@ -69,7 +69,7 @@
 
     <aside class="content-right-nav" name='category' id="content-right-nav">
         <section class="solid">
-            <h3>Create KPI</h3>
+            <h3>创建KPI</h3>
             <p>Create kpi in different category , then you can edit it's
             max target and min target</p>
             <a class="btn btn-primary" id="kpi-add-show">Create Now</a>
@@ -81,7 +81,7 @@
             <a class="btn btn-primary" id="kpi-library-btn">Choose now</a>
         </section>
         <section class="solid">
-            <h3>Next Step</h3>
+            <h3>下一步</h3>
             <p>After creating kpi,you should create department and user,
                 then assign kpis to user in department</p>
             <a class="btn btn-primary next-manage-department-btn" >Manage Department</a>
