--- a/app/assets/stylesheets/_epm_base.css
+++ b/app/assets/stylesheets/_epm_base.css
@@ -84,9 +84,9 @@ header{
     z-index:30;
     position:relative;
     background-color:#5fa9da;
-    box-shadow:0px 2px 2px #c9c9c9;
-    -moz-shadow:0px 2px 2px #c9c9c9;
-    -webki-shadow:0px 2px 2px #c9c9c9;
+    box-shadow:0 2px 5px rgba(71, 71, 71, 0.3);
+    -moz-shadow:0 2px 5px rgba(71, 71, 71, 0.3);
+    -webki-shadow:0 2px 5px rgba(71, 71, 71, 0.3);
 }
 .user-portrait-background{
     position:relative;
