--- a/app/views/entity_groups/index.html.erb
+++ b/app/views/entity_groups/index.html.erb
@@ -1,42 +1,70 @@
-<div style="display:table;width:100%;table-layout:fixed;height:100%;margin-top:-71px;position:absolute">
-<%= render :partial=>'entity_groups/left_menu'%>
 
-<div class="manage-right-content" id="manage-right-content">
-     <div class="manage-btn-group" id="manage-btn-group" special="view">
 
-          <p id="manage-edit-target" ></p>
-          <i class="icon-pencil"></i>
-          <input type="text"/>
-          <a class="btn btn-primary" id="entity-add-show"><i class="icon-plus"></i>选择部门</a>
-          <span>Enter:Confirm&nbsp;&nbsp;&nbsp;&nbsp;Esc:Cancel</span>
-     </div>
-     <div class="assign-entity-wrap" id="assign-entity-wrap">
-          <ul>
-               <%if @user_group_entities
-               @user_group_entities.each_with_index do |entity,i|%>
-               <li>
-                    <h3><%= entity.name%></h3>
-                    <i class="icon-trash"  entity_id="<%= entity.entity_group_item_id%>"></i>
-               </li>
-               <% end;end%>
-          </ul>
-     </div>
-</div>
-</div>
-<div class="manage-user-add" id="manage-entity-add" special="entity">
-     <div style="width:auto;height:71px;"></div>
-     <i class="icon-remove" id="close-add-entity" ></i>
-     <p>
-          部门列表
-     </p>
-     <ul>
-          <%@entities.each do |entity|%>
-          <li>
-               <h3 id="<%=entity.id%>"><%=entity.name%></h3>
-          </li>
-          <%end%>
-     </ul>
-</div>
+ <div style="display:table;width:100%;table-layout:fixed;height:100%;margin-top:-71px;position:absolute">
+        <div class="content-left-main" name="view" id="content-left-main">
+            <div style="width:auto;height:71px;"></div>
+            <div class="left-content-title" id="left-content-title">
+                <p class="current-group-item">Manage View</p>
+            </div>
+
+            <div class="manage-left-content" id="manage-left-content">
+                <%= render :partial=>'entity_groups/left_menu'%>
+
+                <div class="manage-right-content" id="manage-right-content">
+                    <div class="manage-btn-group" id="manage-btn-group" special="view">
+                        <p id="manage-edit-target" ></p>
+                        <i class="icon-pencil"></i>
+                        <input type="text"/>
+                        <a class="btn btn-primary assign-department-btn" id="entity-add-show">分配部门</a>
+                    </div>
+                    <div class="assign-entity-wrap" id="assign-entity-wrap">
+                        <ul>
+                           <%if @user_group_entities
+                           @user_group_entities.each_with_index do |entity,i|%>
+                              <li>
+                                  <h3><%= entity.name%></h3>
+                                  <i class="icon-trash"  entity_id="<%= entity.entity_group_item_id%>"></i>
+                              </li>
+                           <% end;end%>
+                        </ul>
+                    </div>
+                </div>
+
+
+                <div class="manage-user-add" id="manage-entity-add" special="entity">
+                    <i class="icon-remove" id="close-add-entity" ></i>
+                    <p>
+                     部门列表
+                    </p>
+                    <ul>
+                       <%@entities.each do |entity|%>
+                       <li>
+                              <h3 id="<%=entity.id%>"><%=entity.name%></h3>
+                       </li>
+                       <%end%>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+
+        <aside class="content-right-nav" name='entity' id="content-right-nav">
+            <section class="solid">
+                <h3>分配部门</h3>
+                <p>Creating view first , then assign department to the view ,
+                view is the base condition in analytics</p>
+            </section>
+            <section class="solid">
+                <h3>下一步</h3>
+                <p>After taking care of everything in manage part,you should let your
+                user(staff) go to 'Entry KPIs' to entry their kpi state</p>
+                <a class="btn btn-primary" href="<%= new_kpi_entry_path%>">Entry KPIs</a>
+            </section>
+        </aside>
+    </div>
+
+
+
 <input type="hidden" value="<%= @active_entity_group_id%>" id="entity_group_id" />
 <script>
      $(document).ready(function() {
