--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -69,22 +69,22 @@
 
     <aside class="content-right-nav" name='group' id="content-right-nav">
         <section class="solid">
-            <h3>Create User</h3>
+            <h3>创建用户</h3>
             <p>User as well as your staff in different department who created by you and
             then entry the kpi assigned</p>
             <a class="btn btn-primary" id="add-user-show">Create Now</a>
         </section>
         <section class="solid">
-            <h3>Assign KPI</h3>
+            <h3>分配KPI</h3>
             <p>You can assign different kpi to your user just
             like assigning task</p>
             <a class="btn btn-primary" id="manage-user-delivery">Assign KPI</a>
         </section>
         <section class="solid">
-            <h3>Next Step</h3>
+            <h3>下一步</h3>
             <p>After assigning kpi to your staff,you should put departments together
             to your view as your viewpoint to analytics or dashboard</p>
-            <a class="btn btn-primary" >Manage View</a>
+            <a class="btn btn-primary" href="<%= entity_groups_path%>">Manage View</a>
         </section>
     </aside>
 </div>
