--- a/app/assets/stylesheets/Manage.css
+++ b/app/assets/stylesheets/Manage.css
@@ -1,7 +1,7 @@
 /********************************************************************************************************* 分类系列
 *******************************************************************************************************************/
 .manage-left-menu{
-    background-color:#EFF2F6;
+    background-color:#fafafa;
     width:150px;
     margin:0;
     padding:0 0 10px;
