--- a/app/views/kpis/index.html.erb
+++ b/app/views/kpis/index.html.erb
@@ -84,7 +84,7 @@
             <h3>下一步</h3>
             <p>After creating kpi,you should create department and user,
                 then assign kpis to user in department</p>
-            <a class="btn btn-primary next-manage-department-btn" >Manage Department</a>
+            <a class="btn btn-primary " href="<%= entities_path%>">管理部门</a>
         </section>
     </aside>
 </div>
