--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -84,7 +84,7 @@
             <h3>下一步</h3>
             <p>After assigning kpi to your staff,you should put departments together
             to your view as your viewpoint to analytics or dashboard</p>
-            <a class="btn btn-primary" href="<%= entity_groups_path%>">Manage View</a>
+            <a class="btn btn-primary" href="<%= entity_groups_path%>">管理观察点</a>
         </section>
     </aside>
 </div>
