--- a/app/assets/stylesheets/2_column_right_nav.css
+++ b/app/assets/stylesheets/2_column_right_nav.css
@@ -174,6 +174,9 @@
 .content-left-main[name="dashboard"]{
     height:100%;
 }
+.content-left-main[name="dashboard-add"]{
+    height:auto;
+}
 .left-content-title{
     height:49px;
     background-color:#f7f7f7;
