--- a/app/assets/stylesheets/Dashboard.css
+++ b/app/assets/stylesheets/Dashboard.css
@@ -39,18 +39,18 @@
 .dashboard-moreDetail{
     padding:6px 7px;
     position:relative;
-    border-bottom:1px solid #ddd;
-    background-color:#EFF2F6;
+    /*border-bottom:1px solid #ddd;*/
+    /*background-color:#EFF2F6;*/
     cursor:move;
 }
 .dashboard-moreDetail>p{
     margin:-3px 0 0;
-    width:450px;
+    width:300px;
     text-overflow:ellipsis;
     overflow:hidden;
     white-space:nowrap;
     font-size:16px;
-    color:rgba(0,0,0,0.7);
+    color:rgba(0,0,0,0.3);
 }
 .dashboard-moreDetail>i{
     position:absolute;
@@ -65,9 +65,20 @@
     color:rgba(0,0,0,0.9);
 }
 .update-time{
-    color: rgba(0, 0, 0, 0.7);
+    color: rgba(0, 0, 0, 0.3);
     font-size: 12px;
     position: absolute;
     right: 42px;
     top:6px;
+}
+/*dashboard loading*/
+.dashboard-loading{
+    background:rgba(238, 238, 238, 0.75);
+}
+.dashboard-loading:after{
+    content:"Wait a minute , it's coming";
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 20px;
+    text-align:center;
+    top:30px;
 }
