--- a/app/assets/stylesheets/Manage-user.css
+++ b/app/assets/stylesheets/Manage-user.css
@@ -14,7 +14,7 @@
 /********************************************************************************************************* 添加 User
 *******************************************************************************************************************/
 .manage-user-add.create-user{
-    background:#F7F7F7;
+    background:#f7f7f7;
     width:200px;
     position:absolute;
     right:999em;
