fix point limit

--- a/app/views/kpi_entries/_entry.html.erb
+++ b/app/views/kpi_entries/_entry.html.erb
@@ -12,21 +12,21 @@
      <li id="<%= kpi.user_kpi_item_id%>">
        <table>
          <tr>
-           <td ><%= kpi.name%></td>
-           <td ><%= kpi.category_name%></td>
+           <td title="<%= kpi.name%>"><%= kpi.name%></td>
+           <td title="<%= kpi.category_name%>"><%= kpi.category_name%></td>
 
            <td ><%=KpiDirection.get_desc_by_value(kpi.direction)%></td>
-           <td >
+           <td title="<%= KpiUnit.parse_entry_value(kpi.unit, kpi.user_kpi_item_target_max)%>">
              <span class="entry-target"><%= KpiUnit.parse_entry_value(kpi.unit, kpi.user_kpi_item_target_max)%></span>
            </td>
 
-           <td >
+           <td title="<%= KpiUnit.parse_entry_value(kpi.unit, kpi.user_kpi_item_target_min)%>">
              <span class="entry-target"><%= KpiUnit.parse_entry_value(kpi.unit, kpi.user_kpi_item_target_min)%></span>
            </td>
 
            <td ><input type="text" class="entry-actual"  kpi_id="<%=kpi.id%>" user_kpi_item_id="<%= kpi.user_kpi_item_id%>"  value="<%=value%>" /></td>
 
-
+           <td class="kpi-entry-trend"></td>
          </tr>
          <tr>
            <td><%= kpi.description%></td>
@@ -35,7 +35,7 @@
            <td>Target_Max</td>
            <td>Target_Min</td>
            <td>Actual</td>
-
+           <td>Recent</td>
          </tr>
        </table>
      </li>
