--- a/app/assets/stylesheets/Entry.css
+++ b/app/assets/stylesheets/Entry.css
@@ -28,21 +28,25 @@
 .entry-left-menu li{
     text-align:center;
     color:rgba(0,0,0,0.2);
-    padding:11px 24px;
+    padding:8px 24px;
     cursor:pointer;
     transition:color 0.2s ease-out;
     position:relative;
 
 }
 .entry-left-menu li:not(:first-of-type):hover{
-    color:#F5A133;
+    background-color:#e2e7ef
+}
+.entry-left-menu li:not(:first-of-type):hover a{
+    color:rgba(0,0,0,0.65);
 }
 .entry-left-menu li.active{
-    cursor:default
+    cursor:pointer;
+    background-color:#e2e7ef
 }
 .entry-left-menu li.active a{
-    color:#F5A133;
     pointer-events:none;
+    color:rgba(0,0,0,0.65);
 }
 /********************************************************************************************************* 右边
 *******************************************************************************************************************/
@@ -150,27 +154,33 @@
 }
 /*forth column*/
 .entry-sort-list li>table tr:first-of-type td:nth-of-type(4){
-    color:#5FA9DA;
+    /*color:#5FA9DA;*/
     padding-right:15px;
-    width:120px;
+    width:12%;
 }
 /*fifth column*/
 .entry-sort-list li>table tr:first-of-type td:nth-of-type(5){
-    color:#55c8b4;
-    width:120px;
+    /*color:#55c8b4;*/
+    width:12%;
 }
 
 .entry-sort-list li>table tr:first-of-type td:nth-of-type(6) input{
     position:absolute;
     left:auto;
     top:-2px;
-    width:80px;
+    width:10%;
     padding:5px;
     height:20px;
+    border:1px solid #5FA9DA !important;
 }
 .entry-sort-list li>table tr:first-of-type td:nth-of-type(6){
-    color:#55c8b4;
+    width:15%;
+}
+.entry-sort-list li>table tr:first-of-type td:nth-of-type(7){
     width:14%;
+}
+.kpi-entry-trend{
+
 }
 
 
