manage kpi title

--- a/app/views/kpis/index.html.erb
+++ b/app/views/kpis/index.html.erb
@@ -3,7 +3,7 @@
     <div class="content-left-main" name="category" id="content-left-main">
         <div style="width:auto;height:71px;"></div>
         <div class="left-content-title" id="left-content-title">
-            <p class="current-group-item">管理KPI/p>
+            <p class="current-group-item">管理KPI</p>
         </div>
 
         <div class="manage-left-content" id="manage-left-content">
