--- a/app/assets/stylesheets/Dashboard-add.css
+++ b/app/assets/stylesheets/Dashboard-add.css
@@ -46,10 +46,10 @@
 .dashboard-add-sub-menu ul>li:first-of-type a{
     padding:4px 5px;
 }
-/*.dashboard-add-sub-menu ul>li:first-of-type a:after{*/
-    /*content:"Back";*/
-    /*padding-left:5px;*/
-/*}*/
+.dashboard-add-sub-menu ul>li:first-of-type .icon-arrow-left:after{
+    content:"Back";
+    padding-left:5px;
+}
 .dashboard-add-sub-menu ul>li a{
     display:block;
     padding:4px 10px;
