--- a/app/views/kpi_categories/_left_menu.html.erb
+++ b/app/views/kpi_categories/_left_menu.html.erb
@@ -1,6 +1,6 @@
 
 <ul class="manage-left-menu" id="manage-left-menu" type="category">
-                <li><%= t 'manage.kpi.title'%></li>
+                <li>Kpi类别</li>
                 <li id="manage-menu-add">
                     <input type="text" />
                     <span><i class="icon-plus"></i> Category</span>
