--- a/app/assets/stylesheets/Manage-kpi.css
+++ b/app/assets/stylesheets/Manage-kpi.css
@@ -77,7 +77,7 @@
 .manage-kpi-target>div{
     position:relative;
     overflow-x:hidden;
-    overflow-y:visible;
+    overflow-y:hidden;
     text-overflow:ellipsis;
     white-space:nowrap;
     height:100%;
@@ -100,7 +100,7 @@
     right:999em;
     width:200px;
     overflow-x:hidden;
-    background:#F7F7F7;
+    background:#FAFAFA;
     border-left:1px solid #DCDCDC
 
 }
