fix login user name

--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -47,10 +47,10 @@
      </nav>
      <ul class="nav-user-part">
                            <li>
-                               <i class="icon-user" title="<%= current_user.first_name%>"></i>
+                               <i class="icon-user" title="<%= current_user.first_name%>">  <%= current_user.first_name%></i>
                            </li>
                            <li class='empty'>
-                               <span>&nbsp;</span>
+                               <span></span>
                            </li>
                            <li>
                              <a href="/user_sessions/destroy"><%= t 'auth.view.signout_btn'%></a>
